# vyatta-cfg-op-pptp-client

./: .gitignore  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules
etc/: pptp-provider-template
sysconf/: rename-pptpc
templates-cfg/interfaces/pptp-client/: node.def
templates-cfg/interfaces/pptp-client/node.tag/default-route/: node.def
templates-cfg/interfaces/pptp-client/node.tag/description/: node.def
templates-cfg/interfaces/pptp-client/node.tag/ipv6/enable/: node.def
templates-cfg/interfaces/pptp-client/node.tag/ipv6/enable/local-identifier/: node.def
templates-cfg/interfaces/pptp-client/node.tag/ipv6/enable/remote-identifier/: node.def
templates-cfg/interfaces/pptp-client/node.tag/local-address/: node.def
templates-cfg/interfaces/pptp-client/node.tag/mtu/: node.def
templates-cfg/interfaces/pptp-client/node.tag/name-server/: node.def
templates-cfg/interfaces/pptp-client/node.tag/password/: node.def
templates-cfg/interfaces/pptp-client/node.tag/remote-address/: node.def
templates-cfg/interfaces/pptp-client/node.tag/require-mppe/: node.def
templates-cfg/interfaces/pptp-client/node.tag/server-ip/: node.def
templates-cfg/interfaces/pptp-client/node.tag/user-id/: node.def
templates-op/show/interfaces/pptp-client/: node.def
templates-op/show/interfaces/pptp-client/node.tag/: node.def
templates-op/show/interfaces/pptp-client/node.tag/capture/: node.def
templates-op/show/interfaces/pptp-client/node.tag/log/: node.def
templates-op/show/interfaces/pptp-client/node.tag/traffic/: node.def
(+5 files in other folders)
